<resources>
    <string name="app_name">RFI! Point Counter</string>
    <string name="action_settings">Settings</string>

    <string name="start_counter_number">00</string>
    <string name="win_total">40</string>

    <string name="player_1">Red Dice</string>
    <string name="player_2">Blue Dice</string>
    <string name="player_3">Purple Dice</string>
    <string name="player_4">Yellow Dice</string>

    <string name="negative_2">-2</string>
    <string name="negative_5">-5</string>
    <string name="negative_10">-10</string>
    <string name="negative_15">-15</string>

    <string name="positive_2">+2</string>
    <string name="positive_5">+5</string>
    <string name="positive_10">+10</string>
    <string name="positive_15">+15</string>

    <string name="reset">Reset</string>

</resources>
